# zyfangji-retrieval-server

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  需求文档.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-local-data-contract-and-ingestion/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-index-lifecycle-and-status/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-hybrid-search-and-rerank-api/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  (+7 more)
.planning/research/: ._FEATURES.md  ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: 任如亮项目对话.txt  伤寒论原文 病症信息对应表（内容齐全 1 稿）.xlsx
docs/: API.md  DEMO.md  DEPLOYMENT.md
scripts/: demo_smoke.py  search_latency.py
src/zyfangji_retrieval/: cli.py  config.py  demo_service.py
tests/: test_bm25_indexing.py  test_cli_demo.py  test_documentation_contract.py  test_domain_contracts.py  test_embedding_provider.py  test_excel_ingestion.py  test_index_lifecycle.py  test_local_persistence.py  test_qdrant_indexing.py  test_quality_regression_contract.py  test_search_api.py  test_search_contracts.py  test_search_pipeline.py  test_smoke_queries.py  test_status_api.py
tests/fixtures/: smoke_queries.json
(+56 files in other folders)
