[project]
name = "zyfangji-retrieval"
version = "0.1.0"
description = "TCM formula retrieval service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic==2.13.4",
    "pandas==3.0.3",
    "openpyxl==3.1.5",
    "typer==0.26.7",
    "qdrant-client==1.18.0",
    "bm25s==0.3.9",
    "jieba==0.42.1",
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "pydantic-settings==2.14.1",
    "FlagEmbedding==1.4.0",
]

[project.scripts]
zyfangji-retrieval = "zyfangji_retrieval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==9.1.0",
    "ruff==0.15.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
